Tried fixing the issue with spacing between the predict button and the away button, and also fixed the logos.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+
+  .test-font {
+    font-family: "Bebas Neue", cursive;
+  }
+  
